gcc/testsuite/tiny.dg/test01.tiny
var i : bool;
i := ; # { dg-error "unexpected ‘;’" }
